[gd_scene load_steps=11 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://bg.png" type="Texture" id=2]
[ext_resource path="res://Raw_meat.tscn" type="PackedScene" id=3]
[ext_resource path="res://tahoma.ttf" type="DynamicFontData" id=4]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_ensure_correct_normals = true
vertex_color_use_as_albedo = true
albedo_texture = ExtResource( 2 )

[sub_resource type="PrismMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_ensure_correct_normals = true
vertex_color_use_as_albedo = true
albedo_texture = ExtResource( 2 )

[sub_resource type="Environment" id=6]
tonemap_mode = 2
ss_reflections_enabled = true
ssao_enabled = true
dof_blur_far_quality = 2
dof_blur_near_quality = 2
adjustment_enabled = true

[sub_resource type="DynamicFont" id=5]
size = 14
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )
speed = 0.01

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.0
margin_top = -11.5
margin_right = -255.0
margin_bottom = 25.5
text = "Start Animation"

[node name="Button2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.5
margin_top = 53.5
margin_right = -258.5
margin_bottom = 90.5
text = "Stop Animation"

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.426777, -0.0732233, 0.25, 0.25, 0.25, -0.353553, -0.0732233, 0.426777, 0.25, 0, 0, 0 )
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.426777, -0.0732233, 0.25, 0.25, 0.25, -0.353553, -0.0732233, 0.426777, 0.25, 0, 0, 0 )
visible = false
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Raw_meat" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.782435, 0 )
light_color = Color( 0.992157, 0.615686, 0.615686, 1 )
light_energy = 7.0
shadow_enabled = true
omni_shadow_mode = 0
omni_shadow_detail = 0

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.455034, 0.437753, 1.2936 )
light_color = Color( 0.694118, 1, 0.721569, 1 )
light_energy = 10.97
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00513, 3.67761 )
environment = SubResource( 6 )
current = true

[node name="Button3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.0
margin_top = 125.0
margin_right = -258.0
margin_bottom = 162.0
text = "Exit"

[node name="Label" type="Label" parent="."]
margin_left = 498.0
margin_top = 179.0
margin_right = 716.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 5 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 5
text = "by Andrew (Andrej) Po≈æenel (SDT)"
align = 1
valign = 1
autowrap = true

[node name="Button4" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 65.0
margin_top = 259.5
margin_right = 245.0
margin_bottom = 296.5
text = "Change model"

[node name="Button5" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -465.5
margin_top = -159.5
margin_right = -192.5
margin_bottom = -122.5
text = "Change position of text"

[node name="Button6" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 26.0
margin_top = 320.5
margin_right = 302.0
margin_bottom = 357.5
text = "Change model to MEAT"

[node name="Tween" type="Tween" parent="."]

[node name="SpotLight2" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, -0.414197, 0.840558, 0 )
light_color = Color( 1, 1, 0.764706, 1 )
light_energy = 4.86
shadow_enabled = true
spot_range = 1.4
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed" flags=6]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
